# swagger.yaml
@@ -137,6 +137,30 @@ paths:
           description: Account creation Payload
           required: true
           schema:
+            $ref: '#/definitions/UserAccount'
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Accounts got Successfully
+          schema:
+            $ref: '#/definitions/UserAccounts'
+        '400':
+          description: Invalid Field
+        '500':
+          description: Internal Server Error
+  /user/account/{:id}:
+    get:
+      tags:
+        - User Account Module
+      summary: Get user's account
+      description: API for getting user's account
+      parameters:
+        - in: body
+          name: body
+          description: Account creation Payload
+          required: true
+          schema:
             $ref: '#/definitions/Account'
       produces:
         - application/json
@@ -232,7 +256,7 @@ definitions:
       body:
         type: object
         properties:
-          id:
+          _id:
             type: string
           accountType:
             type: number
@@ -244,6 +268,39 @@ definitions:
             type: string
           balance: 
             type: number
+  UserAccount:
+    properties:
+          userId: 
+            type : string
+            description: user id
+  UserAccounts:
+    type: object
+    properties:
+      status:
+        type: integer
+        example: 200
+      message:
+        type: string
+        example: Success !
+      body:
+        type: array
+        items:
+          type: object
+          properties:
+            _id:
+              type: string
+            accountType:
+              type: number
+            userId: 
+              type : string
+            creationDate:
+              type: string
+            name: 
+              type: string
+            balance: 
+              type: number
+
+
 
 
 
